Add project files (omit large dataset; dataset should be downloaded separately)

--- a/.gitignore
+++ b/.gitignore
@@ -171,7 +171,7 @@ cython_debug/
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
+#  and can be added to the global gitignore or merged into this file. For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
@@ -205,3 +205,12 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# --------------------
+# Project-specific ignores
+# --------------------
+
+# Large dataset files (keep outside of Git; download from Dubai Pulse)
+# Ignore the main Transactions CSV and any CSVs placed in the data/ folder
+/data/Transactions.csv
+/data/*.csv
